<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ac_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ac_remoter_screen"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="#999"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/ac_model_show_view"
                android:layout_width="match_parent"
                android:layout_height="115dp" >

                <TextView
                    android:id="@+id/ac_state_model"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingBottom="25dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="25dp"
                    android:paddingTop="25dp"
                    android:textColor="@android:color/white"
                    android:visibility="invisible" />
            </RelativeLayout>

            <View
                android:id="@+id/ac_screen_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="48dp"
                android:layout_marginRight="20dp"
                android:background="#99FFFFFF"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <RelativeLayout
                    android:id="@+id/ac_sweep_wind_show_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp" >

                    <TextView
                        android:id="@+id/ac_state_sweep_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="invisible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ac_put_wind_show_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp" >

                    <TextView
                        android:id="@+id/ac_state_put_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:visibility="invisible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ac_wind_speed_show_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp" >

                    <TextView
                        android:id="@+id/ac_state_wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="高风"
                        android:textColor="#FFF"
                        android:visibility="invisible" />
                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/ac_dragree_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ac_state_degree"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="32dp"
                android:layout_toRightOf="@+id/ac_state_degree"
                android:src="@drawable/ic_launcher"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ac_state_degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="20"
                android:textColor="@android:color/white"
                android:textSize="90dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ac_command_model"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_model"
                android:text="@string/ac_commands_model"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ac_command_power"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_power"
                android:text="@string/ac_commands_power"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ac_command_sweep_wind"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_sweep_wind"
                android:text="@string/ac_commands_sweep_wind"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ac_command_warm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_hot"
                android:text="@string/ac_commands_warm_wind"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ac_command_heat_up"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:scaleType="center"
                android:tag="sts_tmp_plus"
                android:text="+"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ac_command_wind_direct"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_wind_direction"
                android:text="@string/ac_commands_put_wind"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ac_commands_temperature"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ac_command_cold"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_cold"
                android:text="@string/ac_commands_cold_wind"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ac_command_heat_down"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:scaleType="center"
                android:tag="sts_tmp_minus"
                android:text="-"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ac_command_wind_speed"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_wind_speed"
                android:text="@string/ac_commands_wind_sppd"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <!-- 测试模式按键 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ac_command_fan"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_fan"
                android:text="送风"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ac_command_dry"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:scaleType="center"
                android:tag="sts_dry"
                android:text="除湿"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ac_command_auto"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_auto"
                android:text="自动"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <!-- 测试温度按键 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ac_command_17"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_fan"
                android:text="17度"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ac_command_20"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:scaleType="center"
                android:tag="sts_dry"
                android:text="20度"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ac_command_27"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:tag="sts_auto"
                android:text="27度"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <!-- 风速按键 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ac_command_low"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:tag="sts_fan"
                android:text="低"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ac_command_media"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:scaleType="center"
                android:tag="sts_dry"
                android:text="中"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/ac_command_high"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:tag="sts_auto"
                android:text="高"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ac_command_auto_speed"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:tag="sts_fan"
                android:text="自动"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>